Added April 27th IoT stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-
+| Thursday, April 27      | 2:30 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]              |
   </TabItem>
   <TabItem value="recurring">
 
@@ -188,6 +188,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[96]: https://www.youtube.com/watch?v=OTDZIK55DX0
 [95]: https://www.youtube.com/watch?v=GBgvCTQfcVw
 [94]: https://www.youtube.com/watch?v=uo91t1bMOcg
 [93]: https://www.youtube.com/watch?v=RROQA0QOq0k
