--- a/docs/howtos/solutions/caching-architecture/write-through/index-write-through.mdx
+++ b/docs/howtos/solutions/caching-architecture/write-through/index-write-through.mdx
@@ -13,6 +13,8 @@ import SourceCodeMovieApp from '../common-caching/source-code-movie-app.mdx';
 import WritePatternDifferences from '../common-caching/write-behind-vs-write-through.mdx';
 
 import mongoCompassImage from './images/mongo-compass.png';
+import redisHashView from './images/04-redis-hash-view.png';
+import redisHashUpdatedView from './images/07-redis-hash-updated-view.png';
 
 <Authors frontMatter={frontMatter} />
 
@@ -27,7 +29,7 @@ With the **Write-through** pattern, every time an application writes data to the
 
 Below is a diagram of the write-through pattern for the application:
 
-![write-through-pattern using Redis in a movie streaming application](./images/pattern-wt.jpg)
+![write-through-pattern using Redis in a movie streaming application](./images/pattern-wt.png)
 
 The pattern works as follows:
 
@@ -70,18 +72,14 @@ You can skip reading this section if you are already familiar with RedisGears)
 
 ### Programming Redis using the write-through pattern
 
-Developers need to load some code (say python in our example) to the Redis server before using the write-through pattern (which syncs data from Redis to the system of record). Redis server has a RedisGears module that interprets the python code and syncs the data from Redis to the system of record.
-
-Loading the Python code is easier than it sounds. Simply replace database details in the Python file and then load the file to the Redis server.
-
-For our sample code we will demonstrate writing `users` to Redis and then writing through to PostgreSQL. To get setup use the docker-compose.yml file below:
+For our sample code, we will demonstrate writing `users` to Redis and then writing through to PostgreSQL. Use the docker-compose.yml file below to setup required environment:
 
 ```yaml title="docker-compose.yml"
-version: "3.9"
+version: '3.9'
 services:
   redis:
     container_name: redis
-    image: "redislabs/redismod:latest"
+    image: 'redislabs/redismod:latest'
     ports:
       - 6379:6379
     deploy:
@@ -108,9 +106,13 @@ To run the docker-compose file, run the following command:
 $ docker compose up -d
 ```
 
-This will create a Redis server, a PostgreSQL server, and an Adminer server. Adminer is a web-based database management tool that allows you to view and edit data in your database.
+This will create a `Redis` server, a `PostgreSQL` server, and an `Adminer` server. Adminer is a web-based database management tool that allows you to view and edit data in your database.
 
-Next, open your browser to http://localhost:8080/?pgsql=postgres&username=root&db=example&ns=public&sql=. You will have to input the password (which is "password" in the example above), then you will be taken to a SQL command page. Run the following SQL command to create a table:
+Next, open your browser to [http://localhost:8080/?pgsql=postgres&username=root&db=example&ns=public&sql=](http://localhost:8080/?pgsql=postgres&username=root&db=example&ns=public&sql=). You will have to input the password (which is `password` in the example above),
+
+![adminer-login](./images/01-adminer-login.png)
+
+then you will be taken to a SQL command page. Run the following SQL command to create a table:
 
 ```sql title="users.sql"
 CREATE TABLE users (
@@ -125,6 +127,10 @@ CREATE TABLE users (
     updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
 );
 ```
+
+![adminer-table-creation](./images/02-adminer-table-creation.png)
+
+Developers need to load some code (say python in our example) to the Redis server before using the write-through pattern (which syncs data from Redis to the system of record). Redis server has a RedisGears module that interprets the python code and syncs the data from Redis to the system of record.
 
 Now, we need to create a RedisGears recipe that will write through to the PostgreSQL database. The following Python code will write through to the PostgreSQL database:
 
@@ -174,7 +180,7 @@ psycopg2-binary
 cryptography
 ```
 
-There are two ways to load that Python file into the Redis server:
+There are two ways (gears CLI and RG.PYEXECUTE) to load that Python file into the Redis server:
 
 1. Using the gears command-line interface (CLI)
 
@@ -184,6 +190,14 @@ Find more information about the Gears CLI at [gears-cli](https://github.com/Redi
 # install
 pip install gears-cli
 ```
+
+To run our write-through recipe using `gears-cli`, we need to run the following command:
+
+```shell
+$ gears-cli run --host localhost --port 6379 write-through.py --requirements requirements.txt
+```
+
+You should get a response that says "OK". That is how you know you have successfully loaded the Python file into the Redis server.
 
 :::tip
 
@@ -195,27 +209,19 @@ If you are on Windows, we recommend you use WSL to install and use gears-cli.
 
 ```shell
 # Via redis cli
-RG.PYEXECUTE 'pythonCode' REQUIREMENTS rgsync pymongo==3.12.0
+RG.PYEXECUTE 'pythonCode' REQUIREMENTS rgsync psycopg2-binary cryptography
 ```
 
 :::tip
 
 The RG.PYEXECUTE command can also be executed from the Node.js code
-(Consult [the sample Node file](https://github.com/redis-developer/ebook-speed-mern-backend/blob/main/data/write-through/wt-main.js) for more details)
+(Consult <u>[the sample Node file](https://github.com/redis-developer/ebook-speed-mern-backend/blob/main/data/write-through/wt-main.js)</u> for more details)
 
 :::
 
-We are going to use `gears-cli`. To run our write-through recipe using `gears-cli`, we need to run the following command:
-
-```shell
-$ gears-cli run --host localhost --port 6379 write-through.py --requirements requirements.txt
-```
-
-You should get a response that says "OK". That is how you know you have successfully loaded the Python file into the Redis server.
-
 :::tip
 
-Find more examples in the [Redis Gears GitHub repository](https://github.com/RedisGears/rgsync/tree/master/examples/).
+Find more examples in the <u>[Redis Gears GitHub repository](https://github.com/RedisGears/rgsync/tree/master/examples/)</u>.
 
 :::
 
@@ -229,21 +235,45 @@ RedisInsight is the free redis GUI for viewing data in redis. <u>[Click here to 
 
 The next step is to verify that RedisGears is syncing data between Redis and PostgreSQL. Note that in our Python file we specified a prefix for the keys. In this case, we specified `__` as the prefix, `users` as the table, and `id` as the unique identifier. This instructs RedisGears to look for the following key format: `__{users:<id>}`. Try running the following command in the Redis command line:
 
-```shell
-> hset __{users:1} username john email john@gmail.com pwhash d1e8a70b5ccab1dc2f56bbf7e99f064a660c08e361a35751b9c483c88943d082 first John last Doe dob 1990-01-01 created_at 2023-04-20 updated_at 2023-04-20
 ```
+hset __{users:1} username john email john@gmail.com pwhash d1e8a70b5ccab1dc2f56bbf7e99f064a660c08e361a35751b9c483c88943d082 first John last Doe dob 1990-01-01 created_at 2023-04-20 updated_at 2023-04-20
+```
+
+![redis-hash-insert](./images/03-redis-hash-insert.png)
+
+Check [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) to verify that the hash value made it into Redis. After RedisGears is done processing the `__{users:1}` key, it will be deleted from Redis and replaced by the `users:1` key. Check RedisInsight to verify that the `users:1` key is in Redis.
+
+<img
+  src={redisHashView}
+  alt="redis-hash-view"
+  width="500"
+  className="margin-bottom--md"
+/>
 
 Next, confirm that the user is inserted in PostgreSQL too by opening up the [select page in Adminer](http://localhost:8080/?pgsql=postgres&username=root&db=example&ns=public&select=users). You should see the user inserted in the table.
 
-You can also check [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) to verify that the hash value made it into Redis. After RedisGears is done processing the `__{users:1}` key, it will be deleted from Redis and replaced by the `users:1` key. Check RedisInsight to verify that the `users:1` key is in Redis.
+![adminer-hash-view](./images/05-adminer-hash-view.png)
 
 This is how you can use RedisGears to write through to PostgreSQL, and so far we have only added a hash key. You can also update specific hash fields and it will be reflected in your PostgreSQL database. Run the following command to update the `username` field:
 
-```shell
+```
 > hset __{users:1} username bar
 ```
 
+![redis-hash-update](./images/06-redis-hash-update.png)
+
+In RedisInsight, verify that the `username` field is updated
+
+<img
+  src={redisHashUpdatedView}
+  alt="redis-hash-updated-view"
+  width="500"
+  className="margin-bottom--md"
+/>
+
 Now go into Adminer and check the `username` field. You should see that it has been updated to `bar`.
+
+![adminer-updated-hash-view](./images/08-adminer-updated-hash-view.png)
 
 ## Ready to use Redis for write-through caching?
 
