--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -5,18 +5,15 @@ sidebar_label: Redis Live
 slug: /redis-live/
 custom_edit_url: null
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+The Redis Developer Relations Team hosts a variety of live content on [Twitch][twitch], [YouTube][yt] and [Discord][discord]. Follow us to get notified when we go live. And, you know, like and subscribe!
 
-The Redis Developer Relations Team hosts a variety of live content on [Twitch][twitch], [YouTube][yt] and [Discord][discord]. Follow us to get notified when we go live. And, you know, like and subscribe.
-
-Check out our upcoming events:
+## Upcoming Events
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Thursday, April 27      | 2:30 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]              |
 
-Past events:
+## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
