--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,12 +11,12 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, April 27      | 2:30 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]              |
 
 ## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, April 27     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]          |
 | Friday, March 31       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 7][95]                                           |
 | Friday, March 24       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 6][94]                                           | 
 | Thursday, March 23     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 6][93]                                   |
