fraud detection and caching solutions in side bar

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -50,3 +50,64 @@ Learn how to easily build, test and deploy code for common microservice and cach
 </div>
 
 </div>
+
+## Fraud detection
+
+<div class="row">
+ <div class="col">
+  <RedisCard
+    title="Digital Identity Validation"
+    description="How to Handle Digital Identity Validation Using Redis"
+    page="/howtos/solutions/fraud-detection/digital-identity-validation"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
+    title="Transaction Risk Scoring"
+    description="How to use Redis for Transaction risk scoring"
+    page="/howtos/solutions/fraud-detection/transaction-risk-scoring"
+  />
+</div>
+
+</div>
+
+## Caching architecture
+
+<div class="row">
+ <div class="col">
+  <RedisCard
+    title="Write Behind Caching"
+    description="How to use Redis for Write-behind Caching"
+    page="/howtos/solutions/caching-architecture/write-behind"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
+    title="Write Through caching"
+    description="How to use Redis for Write through caching strategy"
+    page="/howtos/solutions/caching-architecture/write-through"
+  />
+</div>
+
+</div>
+
+<div class="row">
+ <div class="col">
+  <RedisCard
+    title="Cache Prefetching"
+    description="How to use Redis for Cache Prefetching Strategy"
+    page="/howtos/solutions/caching-architecture/cache-prefetching"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
+    title="Cache Aside (Query Caching)"
+    description="How to use Redis for Cache-aside"
+    page="/howtos/solutions/microservices/caching"
+  />
+</div>
+
+</div>
