Adds May 19th stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,6 +11,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Friday, May 19          | 2:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack][97]                           |
 
 ## Past Events
 
@@ -160,6 +161,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[97]: https://www.youtube.com/watch?v=mcGL6Lk2IXU
 [96]: https://www.youtube.com/watch?v=OTDZIK55DX0
 [95]: https://www.youtube.com/watch?v=GBgvCTQfcVw
 [94]: https://www.youtube.com/watch?v=uo91t1bMOcg
